WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23242
CanvasRenderingContext2D::transform() applies the matrix in the wrong order
https://bugs.webkit.org/show_bug.cgi?id=23242
Summary
CanvasRenderingContext2D::transform() applies the matrix in the wrong order
Simon Fraser (smfr)
Reported
2009-01-11 12:38:57 PST
CanvasRenderingContext2D::transform() does a post-multiply, rather than a pre-multiply when applying the transform. This results in incremental painting bugs, and breaks isPointInPath.
Attachments
Patch, LayoutTests, changelog
(7.58 KB, patch)
2009-01-11 13:10 PST
,
Simon Fraser (smfr)
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-01-11 12:39:38 PST
<
rdar://problem/6487750
>
Simon Fraser (smfr)
Comment 2
2009-01-11 13:04:53 PST
Filed
bug 23243
on TransformationMatrix::multiple ambiguity.
Simon Fraser (smfr)
Comment 3
2009-01-11 13:10:32 PST
Created
attachment 26614
[details]
Patch, LayoutTests, changelog
Simon Fraser (smfr)
Comment 4
2009-01-11 13:11:41 PST
Good testing site:
http://nerget.com/working/algorithm-ink/
Simon Fraser (smfr)
Comment 5
2009-01-11 13:23:15 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog A LayoutTests/fast/canvas/canvas-incremental-repaint-2.html M LayoutTests/fast/canvas/pointInPath-expected.txt M LayoutTests/fast/canvas/pointInPath.js A LayoutTests/platform/mac/fast/canvas/canvas-incremental-repaint-2-expected.checksum A LayoutTests/platform/mac/fast/canvas/canvas-incremental-repaint-2-expected.png A LayoutTests/platform/mac/fast/canvas/canvas-incremental-repaint-2-expected.txt M WebCore/ChangeLog M WebCore/html/CanvasRenderingContext2D.cpp Committed
r39807
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug