2009-01-11  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Oliver Hunt

        https://bugs.webkit.org/show_bug.cgi?id=23242

        Fix CanvasRenderingContext2D::transform to do a pre-multiply,
        rather than a post-multiply into m_transform. This bug did not affect
        drawing, but did cause m_transform to be incorrect, which impacted
        willDraw(), and isPointInPath.

        Test: fast/canvas/canvas-incremental-repaint-2.html

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::transform):

Canonical link: https://commits.webkit.org/32005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39807 268f45cc-cd09-0410-ab3c-d52691b4dbfc